[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.4"
embassy-executor = {path = "deps/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-rp = { path = "deps/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = {version = "0.1.1", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"]}
embassy-sync = {path = "deps/embassy-sync"}
pio-proc = "0.2"
pio = "0.2.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = {version = "0.3.28", default-features = false, features = ["async-await"]}


